<resources>
    <string name="app_name">Mance</string>
    <string name="title_home">Home</string>
    <string name="title_kontak">Kontak</string>
    <string name="title_event">Festival</string>
    <string name="title_laporan">Laporan</string>
    <string name="title_profil">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="berita_baru">Berita Terbaru</string>
    <string name="berita_selengkapnya">Kategori Berita</string>
    <string name="kuliner">Kuliner</string>
    <string name="title_activity_lokasi_event">Map</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tidak_terhubung_ke_server">Gagal terhubung ke server</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="suka">Suka </string>
    <string name="tidak_ada_berita">Berita belum tersedia</string>
    <string name="content_kosong">Konten belum tersedia</string>
    <string name="toko">Toko</string>
    <string name="daftar"> Daftar</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="belum_ada_event">Belum ada event</string>
    <string name="lokasi">Lokasi</string>
    <string name="persiaplikasi">1.0</string>

    <string name="facebook_app_id">186330145622267</string>
    <string name="facebook_account_kit_client_token">f79f4d88b4b3fa7cb291f7d94f112d8e</string>
    <string name="fb_login_protocol_scheme">fb186330145622267</string>
    <string name="ak_login_protocol_scheme">ak186330145622267</string>

    <string name="Visi">Muara enim untuk rakyat yang agamis berdaya saing mandiri, sehat dan sejahtera</string>
    <string name="Misi">1. Meningkatkan kualitas sumber daya manusia yang beriman, bertakwa, cerdas dan mandiri.\n\n2. Mewujudkan pembinaan anak yatim, yatim piatu dan duafa dan bantuan langsung kepada keluarga miskin hingga mandiri.\n\n3. Mewujudkan daya saing ekonomi daerah melalui penguatan komoditas dan produk unggul desa di sektor agribisnis, agroindustri dan agropolitan.\n\n4. Mewujudkan pendidikan dan kesehatan yang mudah dijangkau dan bebas biaya.\n\n5. Meningkatkan infrastruktur dan suprastruktur dasar yang berkualitas secara merata dan mendukung terwujudnya jalan tol Muara enim-Indralaya-Palembang.\n\n6. Memanfaatkan potensi SDA untuk memenuhi kebutuhan masyarakat dan industri dengan meperhatikan penelolaan tata ruang dan lingkungan.\n\n7. Mewujudkan tata kelola pemerintahan yang profesioanal, kredibel dan berorientasi pada peningkatan pelayanan publik.</string>
    <!--<string name="Misi1">Meningkatkan kualitas sumber daya manusia yang beriman, bertakwa, cerdas dan mandiri. \n2. Mewujudkan pembinaan anak yatim, yatim piatu dan duafa dan bantuan langsung kepada keluarga miskin hingga mandiri.</string>-->
    <!--<string name="Misi2">Mewujudkan pembinaan anak yatim, yatim piatu dan duafa dan bantuan langsung kepada keluarga miskin hingga mandiri.</string>-->
    <!--<string name="Misi3">Mewujudkan daya saing ekonomi daerah melalui penguatan komoditas dan produk unggul desa di sektor agribisnis, agroindustri dan agropolitan.</string>-->
    <!--<string name="Misi4">Mewujudkan pendidikan dan kesehatan yang mudah dijangkau dan bebas biaya.</string>-->
    <!--<string name="Misi5">Meningkatkan infrastruktur dan suprastruktur dasar yang berkualitas secara merata dan mendukung terwujudnya jalan tol Muara enim-Indralaya-Palembang.</string>-->
    <!--<string name="Misi6">Memanfaatkan potensi SDA untuk memenuhi kebutuhan masyarakat dan industri dengan meperhatikan penelolaan tata ruang dan lingkungan.</string>-->
    <!--<string name="Misi7">Mewujudkan tata kelola pemerintahan yang profesioanal, kredibel dan berorientasi pada peningkatan pelayanan publik.</string>-->
    <string name="profil_muara_enim">Profil Muara Enim</string>
    <string name="visi_dan_misi">Visi dan Misi</string>

    <string name="profilmuaraenim">Secara geografis posisi Kabupaten Muara Enim terletak antara 4° sampai 6° Lintang Selatan dan 104° sampai 106° Bujur Timur. Kabupaten Muara Enim merupakan daerah agraris dengan luas wilayah 7.483,06 km², terdiri atas 20 kecamatan. Bumi Serasan Sekundang memiliki batas wilayah:\nUtara\nKabupaten Musi Banyuasin, Kabupaten Banyuasin, Kota Palembang, Kabupaten Penukal Abab Lematang Ilir.\nSelatan\nKabupaten Ogan Komering Ulu Selatan, Kabupaten Kaur (Provinsi Bengkulu).\nBarat\nKabupaten Musi Rawas, Kabupaten Lahat, Kota Pagar Alam.\nTimur\nKabupaten Ogan Komering Ulu, Kabupaten Ogan Ilir, Kota Prabumulih.\n\nKondisi topografi daerah cukup beragam, daerah dataran tinggi di bagian barat daya, merupakan bagian dari rangkaian pegunungan Bukit Barisan, meliputi Kecamatan Semende Darat Laut, Semende Darat Ulu, Semende darat Tengah dan Kecamatan Tanjung Agung. Daerah dataran rendah, berada di bagian tengah (Muara Enim, Ujan Mas, Benakat, Gunung Megang, Rambang Dangku, Rambang, Lubai) terus ke utara–timur laut, terdapat daerah rawa yang berhadapan langsung dengan daerah aliran Sungai Musi, meliputi Kecamatan Gelumbang, Sungai Rotan, dan Muara Belida.\n\nPada awal terbentuknya, Kabupaten Muara Enim bernama Kabupaten Lematang Ilir Ogan Tengah (LIOT). Terbentuknya Kabupaten Muara Enim berawal dari panitia Sembilan sebagai realisasi surat Keputusan Bupati Daerah Kabupaten Lematang Ilir Ogan Tengah tanggal 20 November 1946, hasil karya panitia tersebut disimpulkan dalam bentuk laporan yang terdiri dari 10 bab, dangan judul Naskah Hari Jadi Kabupaten Lematang Ilir Ogan Tengah dan dan telah dikukuhkan dengan surat keputusan Bupati Kepala Daerah Kabupaten Lematang Ilir Ogan Tengah tanggal 14 Juni 1972 No. 47/Deshuk/1972. Tanggal 20 November tersebut kemudian menjadi dasar hari jadi Kabupaten Muara Enim.Kabupaten Muara Enim sebelumnya terdiri dari 22 kecamatan kemudian pada tahun 2012 bertambah tiga kecamatan, yaitu Belimbing, Belida Darat, dan Lubai Ulu, sehingga menjadi 25 kecamatan, dan terakhir menjadi 20 kecamatan sejak keluarnya UU Nomor 7 Tahun 2013, di mana lima kecamatan dalam kabupaten ini, yaitu Talang Ubi, Penukal Utara, Penukal, Abab, dan Tanah Abang, bergabung membentuk kabupaten sendiri yaitu Kabupaten Penukal Abab Lematang Ilir.</string>
    <string name="konten_informasi">Konten Informasi</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
</resources>
