<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_kontak"
        android:icon="@drawable/icon_contact"
        android:title="@string/title_kontak" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/icon_event"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_laporan"
        android:icon="@drawable/icon_report"
        android:title="@string/title_laporan" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/icon_profil"
        android:title="@string/title_profil" />

</menu>
