<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/nointernet"
                android:tint="@android:color/darker_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak_terhubung_ke_server"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coba_lagi"
                android:id="@+id/tv_cobalagi"
                android:textColor="@color/colorOrange"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/custom_button"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvContent"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/slider"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/rvContent"
            android:id="@+id/view"
            android:visibility="gone"
            android:background="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlberita"
        android:visibility="gone"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin">

        <TextView
            android:id="@+id/lblBeritaterbaru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/berita_baru"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblBeritaselengkapnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/rvBerita"
            android:layout_alignRight="@+id/rvBerita"
            android:layout_alignTop="@+id/lblBeritaterbaru"
            android:text="@string/berita_selengkapnya"
            android:textStyle="bold"
            android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
            android:drawableTint="@color/colorPrimary"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvBerita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblBeritaterbaru"
            android:orientation="vertical" />

    </RelativeLayout>
</LinearLayout>