<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.LaporanSayaFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/nointernet"
                android:tint="@android:color/darker_gray"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak_terhubung_ke_server"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_cobalagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:paddingBottom="7dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="7dp"
                android:text="@string/coba_lagi"
                android:textColor="@color/colorOrange" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlcontentkosong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/nointernet"
                android:tint="@android:color/darker_gray"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_kosong"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvPariwisata"/>
    </RelativeLayout>

</LinearLayout>