<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ext="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailBeritaFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/nointernet"
                android:tint="@android:color/darker_gray"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak_terhubung_ke_server"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_cobalagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:paddingBottom="7dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="7dp"
                android:text="@string/coba_lagi"
                android:textColor="@color/colorOrange" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnToko"
        android:layout_below="@+id/appbar"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/rLayout">
                <ImageView
                    android:id="@+id/imgDetaiKuliner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/lbljudulpariwisata"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginBottom="@dimen/activity_margin"/>
            </RelativeLayout>

            <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="@dimen/activity_margin">-->

            <com.bluejamesbond.text.DocumentView
                android:id="@+id/lbldeskripsipariwisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                ext:documentView_textAlignment="justified" />

            <!--</RelativeLayout>-->

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/toko"
        android:id="@+id/btnToko"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:visibility="gone"/>

</RelativeLayout>