<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="id.go.muaraenimkab.mance.fragments.EventFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:theme="@style/ToolbarColoredBackArrow"
            app:titleTextColor="@color/colorDefault"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/nointernet"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak_terhubung_ke_server"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_cobalagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:paddingLeft="15dp"
                android:paddingTop="7dp"
                android:paddingRight="15dp"
                android:paddingBottom="7dp"
                android:text="@string/coba_lagi"
                android:textColor="@color/colorOrange" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/nointernet"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_ada_event"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </RelativeLayout>

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingTop="@dimen/activity_margin"-->
    <!--android:paddingBottom="@dimen/activity_margin"-->
    <!--android:paddingLeft="@dimen/activity_margin">-->

    <!--<android.support.v4.widget.SwipeRefreshLayout-->
        <!--android:id="@+id/swipeRefresh"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <!--<ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator-->
                <!--android:id="@+id/indicator"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--app:selected_color="@color/colorOrange"-->
                <!--app:unselected_color="@color/white"-->
                <!--app:selected_height="10dp"-->
                <!--app:selected_width="10dp"-->
                <!--app:unselected_height="7dp"-->
                <!--app:unselected_width="7dp"-->
                <!--app:shape="oval"-->
                <!--app:selected_padding_left="3dp"-->
                <!--app:selected_padding_right="3dp"-->
                <!--app:unselected_padding_left="3dp"-->
                <!--app:unselected_padding_right="3dp"-->
                <!--android:layout_margin="7dp"-->
                <!--android:visibility="gone"/>-->
        </RelativeLayout>
    <!--</android.support.v4.widget.SwipeRefreshLayout>-->

    <!--</RelativeLayout>-->

</LinearLayout>